2004-05-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dacceptor.test: Adapted to changes in the struct package.
	* dexec.test:     Now importing only the needed structures
	* fa.test:        (list, set operations). Updated all test
	* faop.test:      suites in the same way. Updated all manpages
	* dacceptor.tcl:  to contain the correct package requirements
	* dexec.tcl:      as well.
	* fa.tcl: 
	* faop.tcl: 
	* dacceptor.man: 
	* dexec.man: 
	* fa.man: 
	* faop.man: 

2004-05-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* faop.man: Inserted the correct package names into the
	* fa.man:   manpage headers.
	* dexec.man:
	* dacceptor.man:

2004-04-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dacceptor.man: Slight renaming of a section for better
	  understanding.

	* dexec.tcl:  New package, execution of deterministic 
	* dexec.man:  finite automatons. Executors can do only this,
	* dexec.test: and cannot be manipulated. Added reference
	* fa.man:     to this package to the FA documenation.
	* tests/de_cons.test:
	* tests/de_exec.test:

2004-04-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dacceptor.tcl:  New package, deterministic acceptors
	* dacceptor.man:  out of deterministic finite automaton.
	* dacceptor.test: Acceptors do only this check, and cannot
	* fa.man:         be manipulated. Added reference to this
	                  package to the FA documenation.
	* tests/da_cons.test:
	* tests/da_accept.test:

	* fa.tcl:  Added fromRegex constructor operation. Updated
	* fa.man:  the documentation, and testsuite. Typo fixes in
	* fa.test: documentation as well.

2004-04-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* faop.tcl: Complement requires deterministic input for a correct
	* faop.man: result. Fixed. Updated documentation as well. Typo
	  fixes in doc.

2004-04-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
