@@ -3,7 +3,7 @@
 #
 # Copyright (c) 2004 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 #
-# RCS: @(#) $Id: de_cons.test,v 1.1 2004/04/12 05:11:58 andreas_kupries Exp $
+# RCS: @(#) $Id: de_cons.test,v 1.2 2004/07/28 08:14:11 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -14,7 +14,7 @@ global events
 test de-cons-1.0 {construction error} {
     catch {grammar::fa::dexec a} msg
     set msg
-} {Error in constructor: wrong # args: should be "Snit_constructor type selfns win self fa args"}
+} {Error in constructor: wrong # args: should be "::grammar::fa::dexec::Snit_constructor type selfns win self fa args"}
 
 
 test de-cons-1.1 {construction error} {
